add events link to navbar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <a href="#section-community" onclick="scrollme(this) return false;">community</a>
             </li>
             <li>
+              <a href="#section-events" onclick="scrollme(this) return false;">events</a>
+            </li>
+            <li>
               <a href="#section-projects" onclick="scrollme(this) return false;">projects</a>
             </li>
           </ul>
@@ -93,7 +96,7 @@
       </div>
     </div>
     <hr>
-    <div class="section" id="upcoming-events">
+    <div class="section" id="section-events">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
