Add mailing list notice to index

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="text-center">
               <script async="" defer="" src="https://slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
             </p>
-            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> and click the button to request an invite. we'd love to have you!</p>
+            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> and click the button to request an invite and join our mailing list. we'd love to have you!</p>
           </div>
         </div>
       </div>
