add paypal donate button

--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
           <div class="col-sm-6">
             <p class="text-info text-right">
               <br>
-              <br>
             </p>
             <div class="row">
               <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
@@ -167,6 +166,12 @@
                 <a href="https://community.slashrocket.io/"><i class="fa fa-3x fa-fw fa-comments text-inverse"></i></a>
                 <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
                 <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="4KFCEHWWDH25L">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
               </div>
             </div>
             <div class="row">
@@ -175,6 +180,12 @@
                 <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-comments"></i></a>
                 <a href="https://twitter.com/slashrocketio" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
                 <a href="https://github.com/slashrocket" target="_blank"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick">
+                <input type="hidden" name="hosted_button_id" value="4KFCEHWWDH25L">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
               </div>
             </div>
           </div>
