add donate link to navbar

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <li>
               <a href="#section-projects" onclick="scrollme(this) return false;">projects</a>
             </li>
+            <li>
+              <a href="#section-footer" onclick="scrollme(this) return false;">donate</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -175,7 +178,7 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12 hidden-xs text-right">
+              <div class="col-md-12 hidden-xs text-right" id="section-footer">
                 <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
                 <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-comments"></i></a>
                 <a href="https://twitter.com/slashrocketio" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
