--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center">upcoming slashrocket events</h1>
+            <h1 class="text-center">slashrocket events</h1>
           </div>
         </div>
         <div class="row">
