--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col-md-6 col-md-offset-3">
             <img src="images/launch2015.png" id="launch-rocket" class="img">
             <h1 class="text-center">Code Launch 2015</h1>
-            <p class="text-center lead">slashrocket is hosting its inaugural hackathon!</p>
+            <p class="text-center lead">slashrocket hosted its inaugural hackathon!</p>
             <p class="text-center lead">July 11-19, 2015</p>
             <p class="text-center lead"><a href="https://hackathon.slashrocket.io" target="_blank">more info</a></p>
           </div>
