update user total, add link until button is fixed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center">join our community</h1>
-            <p class="text-center">slashrocket is a community of developers of all backgrounds. we started with a few people talking about code and have since grown to a community of over 500 members. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a code of conduct so everyone feels welcome.</p>
+            <p class="text-center">slashrocket is a community of developers of all backgrounds. we started with a few people talking about code and have since grown to a community of more than 900 members. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a code of conduct so everyone feels welcome.</p>
           </div>
         </div>
         <div class="row">
@@ -91,9 +91,9 @@
         <div class="row">
           <div class="col-md-12">
             <p class="text-center">
-              <script async="" defer="" src="https://slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
+              <script async defer src="https://slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
             </p>
-            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> and click the button to request an invite and join our mailing list. we'd love to have you!</p>
+            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> and click the button (or <a href="https://slashrocket-slackin.herokuapp.com">this link</a>) to request an invite and join our mailing list. we'd love to have you!</p>
           </div>
         </div>
       </div>
