--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <div class="row">
           <div class="col-md-6">
             <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-5x fa-fw fa-slack pull-left"></i></a>
-            <h1 class="text-center">Slack</h1>
+            <h1 class="text-center"><a href="https://slashrocket.slack.com/" target="_blank">Slack</a></h1>
             <p class="text-center">chat with us on Slack</p>
           </div>
           <div class="col-md-6">
             <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-5x fa-fw fa-comments pull-right"></i></a>
-            <h1 class="text-center">Discourse</h1>
+            <h1 class="text-center"><a href="https://community.slashrocket.io/" target="_blank">Discourse</a></h1>
             <p class="text-center">participate in our community forum</p>
           </div>
         </div>
