--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
         <div class="row">
           <div class="col-md-12">
             <p class="text-center">
-              <!-- <script async defer src="https://slashrocket-slackin.herokuapp.com/slackin.js?large"></script> -->
+              <!-- <script async defer src="https://join.slashrocket.io/slackin.js?large"></script> -->
             </p>
-            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> then <a href="https://slashrocket-slackin.herokuapp.com"><span class="h3">request a Slack invite</span></a> and join our mailing list. we'd love to have you!</p>
+            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> then <a href="https://join.slashrocket.io"><span class="h3">request a Slack invite</span></a> and join our mailing list. we'd love to have you!</p>
           </div>
         </div>
       </div>
