--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="images/slashrocketicon.png" rel="icon" type="image">
-    <script type="text/javascript">
-      (function() {
-        window.PA_SITE_ID = 2457964944098;
-        var u='//api.pleasant.io/';
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'pleasant.js'; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
   </head>
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -197,4 +189,7 @@
     </footer>
   </body>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
+  <script src="//static.getclicky.com/js" type="text/javascript"></script>
+  <script type="text/javascript">try{ clicky.init(100918251); }catch(e){}</script>
+  <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100918251ns.gif" /></p></noscript>
 </html>
