--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="section">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12" style="height:50px;"></div>
+          <div class="col-xs-12"></div>
         </div>
         <div class="row">
           <div class="col-md-12 col-md-offset-1">
@@ -65,7 +65,8 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center">join our community</h1>
-            <p class="text-center">slashrocket is a community of developers of all backgrounds. we started with a few people talking about code and have since grown to a community of more than 900 members. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a code of conduct so everyone feels welcome.</p>
+            <p class="text-center">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a code of conduct so everyone feels welcome.</p>
+            <p class="text-center"><script async defer src="//join.slashrocket.io/slackin.js?large"></script></p>
           </div>
         </div>
         <div class="row">
