--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
             <li>
               <a href="#section-projects" onclick="scrollme(this) return false;">projects</a>
             </li>
-            <li>
-              <a href="#section-footer" onclick="scrollme(this) return false;">donate</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -65,28 +62,21 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center">join our community</h1>
-            <p class="text-center">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a code of conduct so everyone feels welcome.</p>
+            <p class="text-center">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
+            <p class="text-center">use the button below to join our community!</p>
             <p class="text-center"><script async defer src="//join.slashrocket.io/slackin.js?large"></script></p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-5x fa-fw fa-slack pull-left"></i></a>
-            <h1 class="text-center"><a href="https://slashrocket.slack.com/" target="_blank">Slack</a></h1>
+            <h1 class="text-center"><a href="https://join.slashrocket.io" target="_blank">Slack</a></h1>
             <p class="text-center">chat with us on Slack</p>
           </div>
           <div class="col-md-6">
             <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-5x fa-fw fa-comments pull-right"></i></a>
             <h1 class="text-center"><a href="https://community.slashrocket.io/" target="_blank">Discourse</a></h1>
             <p class="text-center">participate in our community forum</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="text-center">
-              <!-- <script async defer src="https://join.slashrocket.io/slackin.js?large"></script> -->
-            </p>
-            <p class="text-center lead">take a moment to read our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> then <a href="https://join.slashrocket.io"><span class="h3">request a Slack invite</span></a> and join our mailing list. we'd love to have you!</p>
           </div>
         </div>
       </div>
