--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-5x fa-fw fa-slack pull-left"></i></a>
+            <a href="https://join.slashrocket.io/" target="_blank"><i class="fa fa-5x fa-fw fa-slack pull-left"></i></a>
             <h1 class="text-center"><a href="https://join.slashrocket.io" target="_blank">Slack</a></h1>
             <p class="text-center">chat with us on Slack</p>
           </div>
