--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p class="text-center">analysis of reddit posts</p>
           </div>
           <div class="col-md-3">
-            <a href="https://stationstream.space/" target="_blank"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
+            <a href="https://github.com/slashrocket/stationstream" target="_blank"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
             <h2 class="text-center">stationstream</h2>
             <p class="text-center">real-time tracking of the ISS</p>
           </div>
