remove community link, add patreon, update slack section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="#section-community" onclick="scrollme(this) return false;">community</a>
+              <a href="#section-slack" onclick="scrollme(this) return false;">slack</a>
             </li>
             <li>
               <a href="#section-events" onclick="scrollme(this) return false;">events</a>
             </li>
             <li>
               <a href="#section-projects" onclick="scrollme(this) return false;">projects</a>
+            </li>
+            <li>
+              <a href="#section-patreon" onclick="scrollme(this) return false;">patreon</a>
             </li>
           </ul>
         </div>
@@ -51,32 +54,25 @@
         <div class="row">
           <div class="col-md-9 col-md-offset-3">
             <h1 class="text-right">a developer community</h1>
-            <p class="text-right">slashrocket is a friendly, inclusive community<br>for developers of all skill levels and disciplines.</p>
+            <p class="text-right lead">slashrocket is a friendly, inclusive community<br>for developers of all skill levels and disciplines.</p>
           </div>
         </div>
       </div>
     </div>
     <hr>
-    <div class="section" id="section-community">
+    <div class="section" id="section-slack">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center">join our community</h1>
-            <p class="text-center">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
-            <p class="text-center">use the button below to join our community!</p>
+            <p class="text-center lead">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
+            <p class="text-center lead">use the button below to join our community!</p>
             <p class="text-center"><script async defer src="//join.slashrocket.io/slackin.js?large"></script></p>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <a href="https://join.slashrocket.io/" target="_blank"><i class="fa fa-5x fa-fw fa-slack pull-left"></i></a>
-            <h1 class="text-center"><a href="https://join.slashrocket.io" target="_blank">Slack</a></h1>
-            <p class="text-center">chat with us on Slack</p>
-          </div>
-          <div class="col-md-6">
-            <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-5x fa-fw fa-comments pull-right"></i></a>
-            <h1 class="text-center"><a href="https://community.slashrocket.io/" target="_blank">Discourse</a></h1>
-            <p class="text-center">participate in our community forum</p>
+          <div class="col-md-4 col-md-offset-4">
+            <a href="https://slashrocket.slack.com"><img src="images/slack_rgb.png" class="img-responsive"></a>
           </div>
         </div>
       </div>
@@ -95,7 +91,7 @@
             <h1 class="text-center">Code Launch 2015</h1>
             <p class="text-center lead">slashrocket hosted its inaugural hackathon!</p>
             <p class="text-center lead">July 11-19, 2015</p>
-            <p class="text-center lead"><a href="https://hackathon.slashrocket.io" target="_blank">more info</a></p>
+            <p class="text-center lead"><a href="https://hackathon.slashrocket.io">more info</a></p>
           </div>
         </div>
       </div>
@@ -110,28 +106,40 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <a href="http://redditgraphed.com/" target="_blank"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
+            <a href="http://github.com/slashrocket/redditgraphed"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
             <h2 class="text-center">redditgraphed</h2>
             <p class="text-center">analysis of reddit posts</p>
           </div>
           <div class="col-md-3">
-            <a href="https://stationstream.space/" target="_blank"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
+            <a href="https://github.com/slashrocket/stationstream"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
             <h2 class="text-center">stationstream</h2>
             <p class="text-center">real-time tracking of the ISS</p>
           </div>
           <div class="col-md-3">
-            <a href="https://github.com/slashrocket/reactif" target="_blank"><img src="/images/reactif.png" class="img-responsive img-thumbnail" alt="A screen shot of the reactif source code"></a>
+            <a href="https://github.com/slashrocket/reactif"><img src="/images/reactif.png" class="img-responsive img-thumbnail" alt="A screen shot of the reactif source code"></a>
             <h2 class="text-center">reactif</h2>
             <p class="text-center">better gif search for slack</p>
           </div>
           <div class="col-md-3">
-            <a href="https://github.com/slashrocket" target="_blank"><img src="/images/placeholder.png" class="img-responsive img-thumbnail" alt="A placeholder image"></a>
+            <a href="https://github.com/slashrocket"><img src="/images/placeholder.png" class="img-responsive img-thumbnail" alt="A placeholder image"></a>
             <h2 class="text-center">upcoming project...</h2>
             <p class="text-center">help us make something great!</p>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-12" style="height:50px;"></div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="section" id="section-patreon">
+      <div class="container">
+        <div class="row">
+          <h1 class="text-center">become a patron</h1>
+          <p class="text-center lead">we're trying to build neat things for our community, but we can't do it alone. help us out by joining our patreon campaign and getting some cool stuff in return.</p>
+          <div class="col-md-4 col-md-offset-4">
+            <a href="https://www.patreon.com/slashrocket"><img src="images/patreonlogoorange.png" alt="Patreon" class="img-responsive"></a>
+          </div>
         </div>
       </div>
     </div>
@@ -149,29 +157,15 @@
             <div class="row">
               <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
                 <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw fa-slack text-inverse"></i></a>
-                <a href="https://community.slashrocket.io/"><i class="fa fa-3x fa-fw fa-comments text-inverse"></i></a>
                 <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
                 <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="4KFCEHWWDH25L">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12 hidden-xs text-right" id="section-footer">
-                <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
-                <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-comments"></i></a>
-                <a href="https://twitter.com/slashrocketio" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
-                <a href="https://github.com/slashrocket" target="_blank"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="4KFCEHWWDH25L">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
+                <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
+                <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
+                <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
               </div>
             </div>
           </div>
